--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.2",
     "css-loader": "1.0.0",
+    "dotenv": "^6.2.0",
     "style-loader": "0.23.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "regenerator": "^0.13.3",
+    "regenerator-runtime": "^0.13.1"
   }
 }
