--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "regenerator": "^0.13.3",
-    "regenerator-runtime": "^0.13.1"
+    "regenerator-runtime": "^0.13.1",
+    "styled-components": "^4.1.3"
   }
 }
