--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.1",
     "regenerator": "^0.13.3",
     "regenerator-runtime": "^0.13.1",
     "styled-components": "^4.1.3"
