--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.2",
     "css-loader": "1.0.0",
+    "cypress": "^3.1.5",
     "dotenv": "^6.2.0",
     "style-loader": "0.23.0",
     "webpack": "^4.29.3",
@@ -29,6 +30,7 @@
     "react-select": "^2.4.1",
     "regenerator": "^0.13.3",
     "regenerator-runtime": "^0.13.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
